Se crea seccion de destacados, ahi se debe corregir el tamaño de las imagenes ademas de ver el tema de responsividad. Se crea el formulario que quedo casi OK, hay que cambiar el color del boton. y por ultimo se creo el footer al cual le falta ajustar el tamaño.

--- a/assets/css/miEstilo.css
+++ b/assets/css/miEstilo.css
@@ -43,3 +43,23 @@ main{
 .colorLetras{
     color: #fff;
 }
+
+.fondoCard{
+    background-color: #2a99a6;
+}
+
+.imgTarjetas{
+    width: 19rem;
+    height: 20rem;
+
+}
+
+footer{
+    background-color: #2a99a6;
+    height: 15rem;
+}
+
+footer i{
+    color: #fff;
+    font-size: 30px;
+}
