--- a/assets/css/miEstilo.css
+++ b/assets/css/miEstilo.css
@@ -13,6 +13,10 @@ nav div a img{
     width: 9%;
 }
 
+.imagenCarousel{
+    aspect-ratio: 	3/2;
+}
+
 @media(max-width: 576px){
     nav div{
         text-align: center;
